--- a/src/styles/calendar/CalendarHeader.scss
+++ b/src/styles/calendar/CalendarHeader.scss
@@ -12,7 +12,7 @@
         }
     }
 
-    .CalendarHeader > span {
+    .CalendarHeader>span {
         line-height: 28px;
         padding: 0 10px;
         height: 28px;
@@ -68,6 +68,7 @@
 
         .courseMenu {
             width: 100%;
+            min-width: 300px;
             position: absolute;
             top: 36px;
             border: solid 1px #e5e5e5;
@@ -142,6 +143,7 @@
             border: 2px solid #d2d2d2;
             box-sizing: border-box;
             padding: 4px 10px;
+
             a {
                 color: #909090;
             }
